# mlops-proyecto-final

./: .env.example  .gitignore  Dockerfile  README.md  metrics.json  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml
api/: main.py
data/: dataset.csv.dvc
models/: label_encoder.pkl  label_encoder.pkl.dvc  model.pkl.dvc
src/: predict.py  retrain.py  train.py
tests/: test_predict.py
